# CloudToLocal

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  TODO.md  config.json  ctl-dl.py  ctl.py  ctlConfig.yaml  devrequirements.txt  docker-compose.yaml  example_conf.yaml  genres.json  help.py  helpers.py  main.py  playlistCreation.py  podman-compose.yaml  pyproject.toml  requirements.txt  setup.py  setup.sh  songDir  soundcloudPlaylist  soundcloudPlaylistDL.py  test.md  test.py  todo.md  youtubePlaylist  youtubePlaylistDL.py  ytToLocal.py
dep/: main.py
songs/: . .m4a
source/: .harper-dictionary.txt  ctl-dl.py  ctl-dl.tcss  ctldl.py  downloader.py  globals.py  metadata.py  music_brainz.py  playlists.py  report.py  tui.py
source/configs/: ctl_log_config.json
source/css/: editInput.tcss  editInputHelpMenu.tcss  editSelection.tcss  main.tcss
source/utils/: common.py  ctl_logging.py  file_operations.py  logging.py  playlist_handler.py  printing.py  tui.py
src/: ctl-dl.py  globals.py  testConfig.yaml
src/utils/: common.py  file_operations.py  playlist_handler.py  printing.py  tag_handler.py  tui.py
test/: Elfen lied 222 (prod. NEDARB).opus  Issa Rack (Pipe Bomb).opus  archive  baby keem & kendrick lamar - the hillbillies (tee vera techno remix).opus  starry.opus
utils/: common.py  tag_handler.py
