[project]
name = "CloudToLocal"
version = "0.0.0"
description = "Automated Online Service Backup Tool"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Brandon Frazier" }
]
# Regular dependencies
dependencies = [
  "certifi",
  "charset_normalizer",
  "ConfigArgParse",
  "idna",
  "mutagen",
  "PyYAML",
  "requests",
  "urllib3",
  "yt-dlp==2025.09.05",
  "ytmusicapi",
  "selenium",
  "beautifulsoup4",
  "pillow",
  "youtube_title_parse @ https://github.com/Love-Pengy/youtube_title_parse/archive/refs/heads/master.zip"
]

[project.urls]
Repository = "https://github.com/Love-Pengy/CloudToLocal"
Issues = "https://github.com/Love-Pengy/CloudToLocal/issues"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

