[project]
name = "CloudToLocal"
version = "0.1.0"
description = "Automated Online Service Backup Tool"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Brandon Elias Frazier" }
]

# Regular dependencies
dependencies = [
  "certifi",
  "charset_normalizer",
  "ConfigArgParse",
  "idna",
  "mutagen",
  "PyYAML",
  "requests",
  "urllib3",
  "yt-dlp==2025.09.26",
  "ytmusicapi",
  "selenium",
  "beautifulsoup4",
  "pillow",
  "youtube_title_parse @ https://github.com/Love-Pengy/youtube_title_parse/archive/refs/heads/master.zip",
  "textual",
  "textual_image"
]

[project.optional-dependencies]
dev = [
    "textual-dev"
]

[project.urls]
Repository = "https://github.com/Love-Pengy/CloudToLocal"
Issues = "https://github.com/Love-Pengy/CloudToLocal/issues"

